apps/production/client-sites/veronica-mejia/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: veronica-mejia
  namespace: lulo-demo-landings
  labels:
    app: veronica-mejia
spec:
  replicas: 1
  selector:
    matchLabels:
      app: veronica-mejia
  template:
    metadata:
      labels:
        app: veronica-mejia
        name: veronica-mejia
    spec:
      containers:
      - name: veronica-mejia
        image: "registry.yesidlopez.de/veronica-mejia:v1.0.15" # {"$imagepolicy": "lulo-demo-landings:veronica-mejia"}
        ports:
        - containerPort: 3000
        readinessProbe:
          httpGet:
            path: /
            port: 3000
          initialDelaySeconds: 5
          periodSeconds: 10
        livenessProbe:
          httpGet:
            path: /
            port: 3000
          initialDelaySeconds: 15
          periodSeconds: 20
        resources:
          requests:
            memory: "128Mi"
            cpu: "50m"
          limits:
            memory: "256Mi"
            cpu: "300m"
      imagePullSecrets:
      - name: registry-secret
