apps/production/client-sites/veronica-mejia/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: veronica-mejia
  name: veronica-mejia
  namespace: lulo-demo-landings
spec:
  selector:
    app: veronica-mejia
  type: ClusterIP
  ports:
    - port: 3000
      protocol: TCP
      targetPort: 3000
