apps/production/client-sites/veronica-mejia/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: veronica-mejia
  namespace: lulo-demo-landings
  annotations:
    cert-manager.io/cluster-issuer: luloai-issuer
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    external-dns.alpha.kubernetes.io/target: homelab.luloai.com
    nginx.ingress.kubernetes.io/auth-type: basic
    nginx.ingress.kubernetes.io/auth-secret: veronica-mejia-basic-auth
    nginx.ingress.kubernetes.io/auth-realm: "Demo Lulo AI"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - veronica-mejia.demo.luloai.com
      secretName: veronica-mejia-tls
  rules:
    - host: veronica-mejia.demo.luloai.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: veronica-mejia
                port:
                  number: 3000
